[package]
name = "dab"
version = "0.1.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2021"
repository = "https://github.com/ErichDonGubler/dab"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.23.2"

# The profile that `cargo dist` will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.0.7"
rust-toolchain-version = "1.67.1"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc",
	"aarch64-apple-darwin",
]
